--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "fuse.js": "^7.1.0",
     "geist": "^1.3.0",
     "ioredis": "^5.6.0",
+    "lucide-react": "^0.516.0",
     "mime-types": "^3.0.1",
+    "nanoid": "^5.1.5",
     "next": "^15.0.1",
     "nextjs-toploader": "^3.7.15",
     "react": "^18.3.1",
